MDEV-37022 Assertion when adding FK to MyISAM/Aria table with a vector index

adding FK to a table may implicitly add an index, thus sort_keys()
must be called to put the vector index last